Fixed a few bugs and added a jQuery scrollbar
base.css:
	- Removed Simple Scrollbar code
	- Fixed page sizing for more usability
	- added some mobile specific formatting
	- Adjusted elements to work with new scrollbar solution
base.html:
	- Added script and css for changes
	- Added resizeSensor.js into folder to aid in dynamically updating content element

--- a/static/base.css
+++ b/static/base.css
@@ -203,73 +203,6 @@ body > .arrow.clickable {
     z-index: 5;
 }
 
-/* Simple Scrollbar */
-.ss-wrapper {
-    overflow: auto;
-    height: calc(100vh - 30px);
-    position: relative;
-    z-index: 1;
-    float: left;
-    padding-top: 15px;
-    margin-right: -20px;
-}
-
-.ss-content {
-    width: 100%;
-    padding: 0 35px 0 0;
-    position: relative;
-    right: -18px;
-    overflow: auto;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    overflow-x: hidden;
-}
-
-.climber > .content > .ss-wrapper > .ss-content {
-    align-content: center;
-    justify-content: center;
-    padding-top: 80px;
-    padding-bottom: 80px;
-}
-
-.table.page .content .ss-content {
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: calc(100% + 48px);
-    margin-left: -20px;
-}
-
-.ss-scroll {
-    position: relative;
-    background: rgba(0, 0, 0, 0.1);
-    width: 9px;
-    border-radius: 4px;
-    top: 0;
-    z-index: 2;
-    cursor: pointer;
-    opacity: 0;
-    transition: opacity 0.25s linear;
-}
-
-.ss-hidden {
-    display: none;
-}
-
-.ss-container:hover .ss-scroll {
-    opacity: 1;
-}
-
-.ss-grabbed {
-    -o-user-select: none;
-    -ms-user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
 /* Inputs */
 
 .textarea-tall {
@@ -463,7 +396,7 @@ body > .main {
 
 body > .main > .content {
     height: calc(100vh - 40px);
-    min-width: 700px;
+    overflow-x: hidden;
 }
 
 body > .main:after {
@@ -695,16 +628,19 @@ body > .arrow img {
     z-index: 15;
 }
 
+.page {
+    min-width: 250px;
+    color: white;
+}
+
 /* Earn */
 
-.page {
+.earn .page {
     color: white;
-    padding: 10px;
+    padding: 15px;
     font-weight: 700;
     border-radius: 2px;
-    min-width: 250px;
-    width: 100%;
-    overflow: hidden;
+    box-sizing: border-box;
 }
 
 .page > .button, .page > .button-nav > .button {
@@ -874,10 +810,24 @@ body > .arrow img {
     padding-right: 0; 
     margin-right: 15px;
     max-width: 500px;
+    min-height: 450px;
+}
+
+.climber .col .climber-button-con {
+    margin-bottom: 50px;
+    padding-top: 400px;
+}
+
+.climber .col .table.page {
+    margin-bottom: 50px;
 }
 
 .climber .climber-button-con {
     max-width: 350px;
+}
+
+.climber .table.page {
+    min-height: 400px;
 }
 
 /* Earn */
@@ -888,6 +838,8 @@ body > .earn > .content {
 
 .earn .page .section {
     width: 100%;
+    flex-shrink: 1;
+    
 }
 
 .earn .content .page h1::after { 
@@ -903,13 +855,6 @@ body > .earn > .content {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#50b791', endColorstr='#b6e560',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
-.earn .content .page .section:first-child {
-    margin-bottom: 50px;
-}
-
-.earn .content .page .section:last-child {
-    padding-bottom: 80px;
-}
 
 .earn .content .page .section:last-child .button {
     width: 100%;
